--- a/app/styles/Main.scss
+++ b/app/styles/Main.scss
@@ -2,7 +2,6 @@ html, body {
   background: lightgrey;
   font-family: 'Roboto', 'Helvetica', sans-serif;
   margin: 0;
-  padding: 0;
   height: 100vh;
   width: 100vw;
 }
@@ -54,14 +53,13 @@ Header {
   }
 }
 
-.reverse-order {
-  flex-direction: row-reverse;
-}
-
 .about-me-tab {
   display: flex;
   .mdl-card{
+    flex-flow: row nowrap;
+    justify-content: center;
     width: 80%;
+    height: 100%;
   }
   .mdl-card__media {
     width: 300px;
@@ -74,7 +72,33 @@ Header {
 }
 
 .contact-me-tab{
-  background: url('../images/shooting-stars.jpg');
-  width:100%;
-  height:100%;
+  background: url('../images/shooting-stars.jpg') no-repeat;
+  background-size: 100% 100%;
+  height: 75.6vh;
+  width: 100 vw;
+  justify-content: flex-end;
+  padding-right: 20%;
+  form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    fieldset{
+      border: 5px;
+      padding: 10px;
+      .mdl-textfield{
+        background: transparent;
+        border: transparent;
+        width: 300 px;
+        color: dimgrey;
+      }
+      .mdl-button{
+        background: dimgrey;
+      }
+    }
+  }
+}
+
+.reverse-order {
+  order: 1;
 }
